--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,18 @@
 {
   "name": "futures-analysis-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Server backend cho tool futures analysis",
+  "main": "src/server/index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/server/index.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.4.0",
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "socket.io": "^4.7.1",
-    "uuid": "^9.0.0"
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1"
   }
 }
